fix a.e. button alignment

--- a/wp-content/plugins/raffleleader/assets/css/preview_default_style.css
+++ b/wp-content/plugins/raffleleader/assets/css/preview_default_style.css
@@ -330,6 +330,7 @@
     transition: width 0.7s ease-in-out !important;
     display: flex;
     justify-content: center;
+    align-items: center;
     color: white;
     background-color: #1501FE;
     border: none;
